[package]
name = "scraper"
version = "0.1.0"
authors = ["krista-chan <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
scraper = "0.12.0"
regex = "1.4.5"
reqwest = { version = "0.11.2", features  = ["blocking"] }